--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ license-file = 'LICENSE'
 [dependencies]
 anyhow = '1.0.35'
 etcetera = '0.3.2'
-shell-words = '1.0.0'
+snailquote = '0.3.0'
 toml = '0.5.7'
 toml_edit = '0.2.0'
 
