--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ license = "Apache-2.0"
 [dependencies]
 anyhow = '1.0.35'
 etcetera = '0.3.2'
+glob = '0.3.0'
 snailquote = '0.3.0'
 toml = '0.5.7'
 toml_edit = '0.2.0'
