--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ license = "Apache-2.0"
 anyhow = '1.0.35'
 etcetera = '0.3.2'
 glob = '0.3.0'
+itertools = "0.10.0"
 snailquote = '0.3.0'
 toml = '0.5.7'
 toml_edit = '0.2.0'
