--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,6 @@ features = ['serde-1']
 [dependencies.serde]
 version = '1.0'
 features = ['derive']
+
+[dev-dependencies]
+pretty_assertions = "0.6.1"
