--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ dev = []
 [dependencies]
 ansi_term = "0.12"
 anyhow = '1.0.35'
+atty = "0.2.14"
 etcetera = '0.3.2'
 glob = '0.3.0'
 itertools = "0.10.0"
