Add show flag for current show behavior and change show command to output pretty versions.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,12 +25,13 @@ dev = []
 ansi_term = "0.12"
 anyhow = "1.0.35"
 atty = "0.2.14"
+comfy-table = "2.1.0"
+crossterm = "*"
 etcetera = "0.3.2"
 glob = "0.3.0"
 itertools = "0.10.0"
 snailquote = "0.3.0"
 subprocess = "0.2.6"
-toml = "0.5.7"
 toml_edit = "0.2.0"
 
 [dependencies.clap]
@@ -49,6 +50,7 @@ version = "1.0"
 features = ["derive"]
 
 [dev-dependencies]
-pretty_assertions = "0.6.1"
-predicates = "1.0.7"
 assert_cmd = "1.0.3"
+indoc = "1.0"
+predicates = "1.0.7"
+pretty_assertions = "0.6.1"
