--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ crossterm = "^0.19"
 etcetera = "0.3.2"
 glob = "0.3.0"
 itertools = "0.10.0"
+path-absolutize = "3.0.6"
 snailquote = "0.3.0"
 subprocess = "0.2.6"
 toml_edit = "0.2.0"
