--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,8 @@ dev = []
 ansi_term = "0.12"
 anyhow = "1.0.35"
 atty = "0.2.14"
-comfy-table = "2.1.0"
+comfy-table = ">=5.0"
 corpus = {version = "0.2.1", features = ["xdg", "home"]}
-# corpus = {path = "../corpus", features = ["xdg", "home"]}
 crossterm = "^0.19"
 etcetera = "0.3.2"
 glob = "0.3.0"
@@ -36,7 +35,6 @@ path-absolutize = "3.0.6"
 snailquote = "0.3.0"
 subprocess = "0.2.6"
 toml_edit = "0.2.0"
-once_cell = "1.8.0"
 
 [dependencies.clap]
 version = "3.0.0-beta.2"
