--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "sauce"
-version = "0.6.6"
+version = "0.7.0"
 authors = ["Dan Cardin <ddcardin@gmail.com>"]
-edition = "2018"
+edition = "2021"
 description = "A tool for managing directory-specific state."
 documentation = "https://github.com/DanCardin/sauce"
 homepage = "https://github.com/DanCardin/sauce"
@@ -25,24 +25,23 @@ dev = []
 ansi_term = "0.12"
 anyhow = "1.0.35"
 atty = "0.2.14"
-comfy-table = "2.1.0"
+comfy-table = "5.0.0"
 corpus = {version = "0.2.1", features = ["xdg", "home"]}
-# corpus = {path = "../corpus", features = ["xdg", "home"]}
-crossterm = "^0.19"
 etcetera = "0.3.2"
 glob = "0.3.0"
 itertools = "0.10.0"
 path-absolutize = "3.0.6"
-snailquote = "0.3.0"
+snailquote = "0.3.1"
 subprocess = "0.2.6"
 toml_edit = "0.2.0"
 once_cell = "1.8.0"
 
 [dependencies.clap]
-version = "3.0.0-beta.2"
+version = "3.1.18"
 features = [
     "suggestions",
     "color",
+    "derive",
 ]
 
 [dependencies.indexmap]
@@ -57,4 +56,4 @@ features = ["derive"]
 assert_cmd = "1.0.3"
 indoc = "1.0"
 predicates = "1.0.7"
-pretty_assertions = "0.6.1"
+pretty_assertions = "1.2.1"
