--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -21,9 +21,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          profile: minimal
           toolchain: ${{ matrix.toolchain }}
           override: true
 
